# dropbox

server/: .gitignore  docker-compose.yml  pyproject.toml
server/src/: __main__.py  logging.py
server/src/app/: application.py  config.py  lifetime.py
server/src/app/api/: router.py
server/src/app/api/core/: views.py
server/src/app/api/monitoring/: views.py
server/src/core/: exceptions.py  logging_config.py
server/src/domain/models/: file.py
server/src/domain/schemas/: file.py
server/src/infrastructure/database/: models.py  repository.py  session.py
server/src/infrastructure/storage/: interface.py  s3.py
server/src/service/: file_service.py
